begin manifest view

--- a/src/style.scss
+++ b/src/style.scss
@@ -130,7 +130,8 @@ div.tv-app-utils {
     height: 0;
 }
 
-div.tv-app-assets {
+div.tv-app-assets,
+div.tv-app-manifest {
     position: fixed;
     top: 0;
     left: 0;
